fixed white space issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,9 @@
 body{
     font-family: 'Open Sans', sans-serif;
-
 }
 
 .container{
-    margin: 5% 10%;
+    margin: 2% 10%;
     justify-content: center;
     text-align: center;
 }
@@ -15,11 +14,12 @@ body{
     max-width: 100%;
     background-color: #c7e2b2;
     padding: 1rem;
+    white-space: pre;
 }
 .keypad{
     align-self: center;
     background-color: #e1ffc2;
-    padding: 2rem;
+    padding: 2rem 0rem;
     margin: auto;
 }
 .squared, .spacebar{
